--- a/style.css
+++ b/style.css
@@ -1,8 +1,33 @@
 
+body {
+	background-color: #fff;
+	font-family: sans-serif;
+}
+
+a {
+	color: #2F2318;
+}
+
+a.hash {
+	color: #6979A8;
+}
+
+a.link {
+	color: #869DD4;
+}
+
+header {
+}
+
+.content {
+}
+
 .entry {
 	display: block;
 	padding-bottom: 10px;
-	width: 100%;
+	padding-top: 10px;
+	border: 1px solid #fff;
+	border-bottom: 1px solid #6979A8;
 }
 
 header {
@@ -10,7 +35,6 @@ header {
 }
 
 .entry:hover {
-	background-color: yellow;
 }
 
 .entry .title {
@@ -19,7 +43,7 @@ header {
 }
 
 .entry .title:hover {
-	background-color: lime;
+	background-color: #FFFAD8;
 }
 
 .entry .link {
@@ -27,6 +51,6 @@ header {
 }
 
 input {
-	width: 600px;
+	width: 500px;
 }
 
